# gimp-apng

./: AUTHORS  ChangeLog  HACKING  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.in
autom4te.cache/: output.1  requests  traces.0  traces.1
help/: Makefile  Makefile.am  Makefile.in
help/en/: Makefile  Makefile.in  gimp-help.xml
po/: Makefile  Makefile.in  POTFILES  POTFILES.in
src/: Makefile  Makefile.am  Makefile.in  file-apng.c  plugin-intl.h
src/.deps/: file_apng-file-apng.Po
ui/: Makefile.am  Makefile.in  plug-in-file-apng.ui
usrdir/share/gimp-apng/help/en/: index.html
